# rag-agent-backend

./: .gitignore  README.md  docker-compose.yml  langgraph.json  main.py  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
config/: __init__.py  configuration.py
src/: __init__.py  agent.py  app_config.py  db.py  server.py
src/controllers/: auth_controller.py  document_controller.py
src/errors/: __init__.py  exceptions.py  handlers.py
src/models/: token_payload.py
src/models/entities/: Role.py  User.py  __init__.py
src/rag/: __init__.py  embbedings.py  retriever.py  store.py
src/security/: auth_langgraph.py  authorization_langgraph.py  hash.py
src/services/: user_service.py
src/utils/: __init__.py  edges.py  llm.py  nodes.py  prompts.py  state.py
test-data/: benefits-enrollment-guide.md  code-of-conduct.md  cybersecurity-policy.md  employee-directory-CONFIDENTIAL.md  expense-reimbursement-policy.md  pto-vacation-policy.md  remote-work-policy.md
