[project]
name = "rag-agent"
version = "0.1.0"
description = "RAG Agent with Human-in-the-Loop for Customer Support"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.4.1",
    "langchain>=1.2.7",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-google-genai>=4.2.0",
    "langchain-huggingface>=1.2.0",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.7",
    "langgraph-cli>=0.4.12",
    "pydantic-settings>=2.12.0",
]
